# thesis

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  OPTIMIZATIONS  README  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  llvm-config  object_builder.h  testast
anita/: Makefile  README
benchmark/: church.anita  church.rb  fib_iterative.anita  fib_iterative.rb  fib_iterative.results  fib_iterative_anita.profile  fib_recursive.anita  fib_recursive.rb  fib_recursive.results  fib_recursive_anita.profile  fib_recursive_shallow.anita  fib_recursive_shallow.rb  fib_recursive_shallow.results  integers.anita  integers.rb
docs/: tlc.1
experiments/: README
gc-7.1/: Makefile  config.status  darwin_stop_world.c  darwin_stop_world.lo  libcord.la  libgc.la  libtool  pthread_support.c
perf/: .ltime  .time  hej.anita  perf_array.anita  perf_cloner.anita  perf_closure.anita  perf_closure_noup.anita  perf_concur_adder.anita  perf_fib_iter.anita  perf_fib_iter_big.anita  perf_fib_rec.anita  perf_ints.anita  perf_mcalls.anita  perf_mcalls_alternating_obj.anita  perf_mcalls_same_obj.anita  perf_simple_iter.anita  perf_slotassign.anita  perf_sum-file.libs  perf_sumfile.anita  perf_sumfile_concur.anita  perf_sumfile_each.anita  perf_sumfile_inject.anita  report.txt  run_test  small_file.txt  test_stats  testast
src/: Makefile  Makefile.am  Makefile.in  astprinter.h  builder.cpp  builder.h  clines  compile_app  correct_ass  ctc  ctc.rb  ctclib  final  json_parser.cpp  json_parser.h  lexentry.cpp  lexentry.h  lexscope.cpp  lexscope.h  main.cpp  modgen.cpp  modgen.h  new_ctc.rb  run  str_util.cpp  str_util.h
src/ast/: array.cpp  array.h  assignment.cpp  assignment.h  block.cpp  block.h  closure.cpp  closure.h  const_precalc.cpp  const_precalc.h  count_assignments.cpp  count_assignments.h  enum_nodes.h  enum_vardefs.h  expression.cpp  expression.h  if.cpp  if.h  literal.cpp  literal.h  methodcall.cpp  methodcall.h  object.cpp  object.h  parser.cpp  parser.h  return.cpp  return.h  send.cpp  send.h  spawn.cpp  spawn.h  throw.cpp  throw.h  tree_printer.cpp  tree_printer.h  try.cpp  try.h  undefdvars.cpp  undefdvars.h  (+11 more)
src/libthorn/: Makefile  Makefile.old  array.c  array.h  bool.c  bool.h  callsite.c  callsite.h  closure.c  closure.h  config.h  data.c  data.h  entries.c  float.c  float.h  future.c  future.h  integer.c  integer.h  libthorn.h  llvm_gc.h  memory.c  memory.h  msg_queue.c  msg_queue.h  null.c  null.h  object.c  object.h  object_builder.h  object_map.c  object_map.h  object_proto.c  object_proto.h  proc.c  proc.h  process.c  process.h  ptr_tag.c  (+13 more)
src/stdlib/: object_defs.c
tests/: arg.anita  array.anita  array_filter.anita  ass  assign.thorn  bark.anita  bark.txt  berk.anita  bjork.anita  bo.anita  boo.anita  bork.anita  borka.anita  borta.anita  byrk.anita  cacheast  cachepoints.anita  chomp.anita  church.anita  client  client.anita  clientast  clone.anita  clonegrejs.anita  code.ll  compiled.s  cp.anita  delegate.anita  duclos.anita  fel.anita  fun.thorn  (+74 more)
(+149 files in other folders)
